[package]
name = "grammar"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "log2"
path = "src/nginx_log2.rs"

[[bin]]
name = "json"
path = "src/json.rs"

[[bin]]
name = "json2"
path = "src/json2.rs"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
pest = { version = "2.7.15", features = ["pretty-print"] }
pest_derive = "2.7.15"
regex = "1.11.1"
winnow = { version = "0.7.2", features = ["simd"] }
